--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-
+<div>ddd</div>
 </body>
 </html>
